reformulated a bunch of things

--- a/bscwriteup3/graphics.bib
+++ b/bscwriteup3/graphics.bib
@@ -159,6 +159,17 @@ author = "Robert A. Hearn and Erik D. Demaine",
 keywords = "Combinatorial puzzles, Sliding blocks, Computational complexity, Hardness"
 }
 
+@article{Holte2010,
+author = {Holte, Robert C},
+file = {:Users/kdkdk/Library/Application Support/Mendeley Desktop/Downloaded/78c8ff394cb20f9c2d2bfa70f1469c326c0053c4.pdf:pdf},
+keywords = {AAAI, artificial intelligence},
+mendeley-groups = {Estimating difficulty / generation},
+pages = {46--51},
+title = {{Common Misconceptions Concerning Heuristic Search}},
+url = {https://www.aaai.org/ocs/index.php/SOCS/SOCS10/paper/viewFile/2073/2500},
+year = {2010},
+journal = {Proceedings of the Third Annual Symposium on Combinatorial Search (SOCS-10)}
+}
 
 
 @InProceedings{Horvitz1999,
