--- a/bscwriteup3/main.tex
+++ b/bscwriteup3/main.tex
@@ -8,6 +8,7 @@
 \usepackage{booktabs}
 \usepackage{diagbox}
 \usepackage{dirtytalk}
+\usepackage{breakcites}
 
 %\usepackage{rotating}
 %\usepackage{fontspec}
