--- a/bscwriteup3/main.tex
+++ b/bscwriteup3/main.tex
@@ -182,7 +182,7 @@ language=PuzzleScript
 	\centering
 	\Huge
 	\vspace{3.0cm}
-	\textbf{\textsf{Mixed-initiative methods for designing Sokoban-like puzzles}} \\[2.0cm]
+	\textbf{\textsf{Mixed-Initiative Methods for Designing Sokoban-like Puzzles}} \\[2.0cm]
 	\includegraphics*[width=0.8\textwidth]{figures/titleimage} \\ % TITLE IMAGE - replace by attractive and representative images from your thesis
 	\vspace{3cm}
 	\sffamily
